# Pypeline

./: .gitignore  CHANGELOG.md  CRON_lite.md  LICENSE  README.md  REAMDE.md  TODO.md  analyze_code.bat  analyze_code.sh  clean.sh  pypeline-dev.py  pyproject.toml  requirements-analyze.txt  requirements-documentation.txt  vulture_whitelist.py
docs/: sphinx-full-rebuild.bat  sphinx-full-rebuild.sh
example/: pypeline_example.py
example/pypeline/: activity_bootstrap.csv  activity_processing.csv  processor.properties
src/pypeline/: activity.py  activity_bootstrap_rule.py  notification.py  processor.py  processors.py  properties_manager.py  pypeline.py  rule_engine.py  timed_execution_rule.py  utils.py
tests/pypeline/: test_timed_execution_rule.py  timed_execution_rule_test.py
